--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ hydra = "^2.5"
 black = "^22.10.0"
 isort = "^5.10.1"
 kaggle = "^1.5.12"
+summarizer = "^0.0.7"
+bert-extractive-summarizer = "^0.10.1"
 
 
 [build-system]
