--- a/nn/deberta-large-with-summary-for-cohesion.yaml
+++ b/nn/deberta-large-with-summary-for-cohesion.yaml
@@ -5,21 +5,21 @@ dataset:
   data_root_path: ../data/feedback-prize-english-language-learning
   dataset_type: train
 
-  target_columns: [cohesion, syntax, vocabulary, phraseology, grammar, conventions]
+  target_columns: [cohesion]
 
   cv:
-    fold: null  # nullだと全foldで実行
+    fold: -1  # <0だと全foldで実行
     n_folds: 4
 
-  train_batch_size: 2
+  train_batch_size: 1
   valid_batch_size: 8
   test_batch_size: null
 
-  exclude_escape_characters: true
+  replace_full_text_with_summary: true
 
 
 model:
-  name: microsoft/deberta-xlarge
+  name: microsoft/deberta-large
   max_length: 1024
 
   gradient_checkpointing: true
@@ -31,7 +31,6 @@ model:
   initializer_range: 0.02
 
   optimizer:
-    bits: 8
     scheduler:
 #      name: null
       name: cosine
@@ -48,23 +47,23 @@ train:
   learning_rate: 1e-6
   epochs: 6
 
+  # 勾配累積を行うか
+  # n_accumulate: 1
   weight_decay: 0.05
 
   name_prefix:
-  name_suffix: v2.1
+  name_suffix: v0.5
   model_path: ./models
 
   #val_check_interval: 0.99
   val_check_interval: 0.05
-#  evaluate_after_steps: 0
-  evaluate_after_steps: 3000
+  #evaluate_after_steps: 2500
+  evaluate_after_steps: 0
 
-  accumulate_grad_batches: null
+  n_accumulate_grad_batches: 1
 
   awp:
     start_epoch: 0
-    adv_lr: 1e-4
-#    adv_lr: 1e-2
+#    adv_lr: 1e-4
+    adv_lr: 1e-2
     adv_eps: 1e-3
-
-
