--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@
 
 ### Linux ###
 *~
-
+data/*
+workspace/uchida/result/*
+*.out
+.vscode
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
