--- a/workspace/uchida/config.yaml
+++ b/workspace/uchida/config.yaml
@@ -2,7 +2,7 @@
 
 seed: 42
 
-debug: True
+debug: False
 dataset:
   # コンペデータのルートパス
   data_root_path: ../../data/feedback-prize-english-language-learning
@@ -19,8 +19,8 @@ dataset:
 
 params:
   min_length: 50
-  max_length: 300
+  max_length: 200
   use_first: False
   num_beams: 4
-  use_models: ["Pegasus_big_bird_large_arxiv"] 
+  use_models: ["Pegasus_xsum"] 
   # ["BERTSUMExt", "GPT-2","T5_base","T5_News","Pegasus_large","Pegasus_cnn_daily","Pegasus_xsum","Bart_large","Bart_cnn_daily","Bart_xsum"]
