--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ kaggle = "^1.5.12"
 summarizer = "^0.0.7"
 bert-extractive-summarizer = "^0.10.1"
 ipykernel = "^6.17.1"
+bertopic = "^0.12.0"
+nbformat = "^5.7.0"
 
 
 [build-system]
